--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,18 @@
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
+lib_deps = 
+	https://github.com/gilmaimon/ArduinoWebsockets
+	arduinogetstarted/ezButton@^1.0.4
+	https://github.com/RoboticsBrno/ServoESP32
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-DCONFIG_MBEDTLS_DYNAMIC_BUFFER=1
+	-DCONFIG_BT_ALLOCATION_FROM_SPIRAM_FIRST=1
+	-DCONFIG_SPIRAM_CACHE_WORKAROUND=1
+board_build.partitions = huge_app.csv
+extra_scripts = pre:build_script_versioning.py
+monitor_speed = 115200
+upload_port = COM5
+monitor_port = COM5
